# Agrocylo-Global

./: .gitignore  Cargo.toml  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  e2e.yml
.husky/: pre-commit
agro-production/: .env.example
agro-production/client/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
agro-production/client/.storybook/: main.js
agro-production/contract/: README.md
agro-production/contract/production-escrow/: Cargo.toml
agro-production/contract/production_escrow/: Cargo.toml
agro-production/contract/registry/: Cargo.toml
agro-production/contract/src/: lib.rs  test.rs
agro-production/server/: .env.example  .gitignore  EVENTS.md  README.md  docker-compose.redis.yml  package-lock.json  package.json
agro-production/server/prisma/: schema.prisma
agro-production/server/src/: app.ts  index.ts
client/: .env.example  API.md  ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
client/e2e/: agrocylo.spec.ts
client/public/: sw.js
contracts/: Cargo.toml.bak  EVENTS.md
contracts/escrow/: Cargo.toml
server/: .env.example  Dockerfile  README.md  dev.db  eslint.config.mjs  openapi.yaml  package-lock.json  package.json  vitest.config.ts
server/docs/: API.md  ARCHITECTURE.md  DOCKER.md  ENVIRONMENT.md  MONITORING.md  SETUP.md  frontend-setup.md
server/prisma/: schema.prisma
server/src/: app.ts  index.ts  worker.ts
(+396 files in other folders)
