[workspace]
resolver = "2"
members = [
    "contracts/escrow",
    "agro-production/contract/production-escrow",
    "agro-production/contract/registry",
    "agro-production/contract/production_escrow",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug = true
